--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
+    "antd": "^3.23.5",
     "bootstrap": "^4.3.1",
     "next": "^9.0.6",
     "react": "^16.9.0",
